packages/fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.stderr
error: custom attribute panicked
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  | #[indexer(manifest = "packages/fuel-indexer-tests/trybuild/bad_simple_wasm_graphql.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Bad schema.: ParseError(Syntax { message: " --> 1:1\n  |\n1 | namespace: test_namespace\n  | ^---\n  |\n  = expected type_system_definition", start: Pos(1:1), end: None })

error[E0433]: failed to resolve: use of undeclared type `Receipt`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |                 Receipt::Call {
  |                 ^^^^^^^ use of undeclared type `Receipt`

error[E0433]: failed to resolve: use of undeclared type `Receipt`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |                 Receipt::ReturnData {
  |                 ^^^^^^^ use of undeclared type `Receipt`

error[E0422]: cannot find struct, variant or union type `SomeEvent` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let s = SomeEvent {
  |             ^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `Block` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let data: Vec<Block> = vec![Block {
  |                   ^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::Block;
   |
2  | use fuel_indexer_types::prelude::Block;
   |
2  | use syn::Block;
   |

error[E0422]: cannot find struct, variant or union type `Block` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let data: Vec<Block> = vec![Block {
  |                                 ^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::Block;
   |
2  | use fuel_indexer_types::prelude::Block;
   |
2  | use syn::Block;
   |
2  | use syn::Expr::Block;
   |

error[E0422]: cannot find struct, variant or union type `Header` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |         header: Header {
  |                 ^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::Header;
   |
2  | use fuel_indexer_types::prelude::Header;
   |

error[E0422]: cannot find struct, variant or union type `TransactionData` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |         transactions: vec![TransactionData {
  |                            ^^^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::TransactionData;
   |
2  | use fuel_indexer_types::prelude::TransactionData;
   |

error[E0433]: failed to resolve: use of undeclared type `TransactionStatus`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |             status: TransactionStatus::default(),
  |                     ^^^^^^^^^^^^^^^^^ use of undeclared type `TransactionStatus`
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::TransactionStatus;
   |
2  | use fuel_indexer_types::prelude::TransactionStatus;
   |

error[E0433]: failed to resolve: use of undeclared type `Transaction`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |             transaction: Transaction::default(),
  |                          ^^^^^^^^^^^ use of undeclared type `Transaction`
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::Transaction;
   |
2  | use fuel_indexer_types::prelude::Transaction;
   |
2  | use fuels::prelude::Transaction;
   |
2  | use fuels::tx::Transaction;
   |
     and 1 other candidate

error[E0425]: cannot find function `serialize` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let mut bytes = serialize(&data);
  |                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_lib::utils::serialize;
   |
2  | use fuel_indexer_plugin::serialize;
   |

error[E0425]: cannot find function `handle_events` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     handle_events(ptr, len);
  |     ^^^^^^^^^^^^^ not found in this scope

error: unused import: `types::traits::Tokenizable`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     use fuels::{core::abi_encoder::ABIEncoder, types::traits::Tokenizable};
  |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `-D unused-imports` implied by `-D warnings`
